# kern

./: .gitignore  Cargo.toml  Makefile  README.md  x86_64-unknown-none-gnu.json
src/: gdt.rs  lib.rs  spin.rs  token.rs  vga.rs
src/arch/x86_64/: boot.asm  irq.asm  irq.inc  linker.ld  long_mode_init.asm  multiboot_header.asm  pic.rs
src/arch/x86_64/grub/: grub.cfg
src/irq/: idt.rs  isr.rs  mod.rs  pic.rs
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_mapping.rs
src/port/: mod.rs
