[package]
authors = ["Tristram Healy <trissylegs@gmail.com>"]
name = "kernel"
version = "0.1.0"

[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"
x86 = "0.6.0"

[dependencies.bitflags]
branch = "no_std"
git = "https://github.com/phil-opp/bitflags.git"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[lib]
crate-type = ["staticlib"]
